Fixed sitenotice z-index

--- a/resources/components/common.less
+++ b/resources/components/common.less
@@ -180,6 +180,8 @@ a {
 #siteNotice {
     margin: -@margin-side -@margin-side @margin-side -@margin-side;
     padding: 10px;
+    z-index: 1;
+    position: relative;
     width: 100vw;
     background: @red-30;
     color: @base-100;
